--- a/Repositorios/index.html
+++ b/Repositorios/index.html
@@ -6,7 +6,7 @@
 
 
 
- <h1>Kelebek Mariposas/Kelebek</h1>
+ <h1>jjmapa Prueba</h1>
 
 
 
@@ -18,7 +18,7 @@
 
 
 
-  <li><a href="script.kelebek.zip">script.kelebek.zip</a></li>
+  <li><a href="script.jjmapa.zip">script.jjmapa.zip</a></li>
 
   
   </ul>
