--- a/Addons/index.html
+++ b/Addons/index.html
@@ -2,18 +2,18 @@
 
  <head>
 
- <h1>Kelebek Mariposas/addons</h1>
+ <h1>jjmapa/addons</h1>
 
  </head>
 
  <body>	
 
-  <li><a href="plugin.video.Disco-Kelebek.zip">plugin.video.Disco-Kelebek.zip</a></li>
-  <li><a href="plugin.video.MyHR.zip">plugin.video.MyHR.zip</a></li>
-  <li><a href="plugin.video.Orchestra.zip">plugin.video.Orchestra.zip</a></li>
-  <li><a href="plugin.video.pequelandia.zip">plugin.video.pequelandia.zip</a></li>
-  <li><a href="plugin.video.caza_y_pesca.zip">plugin.video.caza_y_pesca.zip</a></li>
-  <li><a href="script.ebooks-master.zip">script.ebooks-master.zip</a></li>
+  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
+  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
+  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
+  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
+  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
+ 
   </ul>
 
 </body>
