--- a/Scripts/index.html
+++ b/Scripts/index.html
@@ -6,7 +6,7 @@
 
 
 
- <h1>Kelebek Mariposas/wizard</h1>
+ <h1>jjmapa/scripts</h1>
 
 
 
@@ -18,7 +18,7 @@
 
 
 
-  <li><a href="plugin.program.AnWizard.zip">plugin.program.AnWizard.zip</a></li>
+  <li><a href="plugin.program.xxxxx.zip">plugin.program.xxxxx.zip</a></li>
 
   
   </ul>
