--- a/Addons/index.html
+++ b/Addons/index.html
@@ -8,12 +8,53 @@
 
  <body>	
 
-  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
-  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
-  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
-  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
-  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
- 
+  <li><a href="plugin.video.adrianaeurope.zip">plugin.video.adrianaeurope.zip</a></li>
+  <li><a href="plugin.video.aerobic.zip">plugin.video.aerobic.zip</a></li>
+  <li><a href="plugin.video.Agora.zip">plugin.video.Agora.zip</a></li>
+  <li><a href="plugin.video.alfa.zip">plugin.video.alfa.zip</a></li>
+  <li><a href="plugin.video.alma.zip">plugin.video.alma.zip</a></li>
+ <li><a href="plugin.video.atresplayer.zip">plugin.video.atresplayer.zip</a></li>
+ <li><a href="plugin.video.balandro.zip">plugin.video.balandro.zip</a></li>
+ <li><a href="plugin.video.blackghost.zip">plugin.video.blackghost.zip</a></li>
+ <li><a href="plugin.video.canal_cocina.zip">plugin.video.canal_cocina.zip</a></li>
+ <li><a href="plugin.video.cocina.zip">plugin.video.cocina.zip</a></li>
+ <li><a href="plugin.video.cometelo.zip">plugin.video.cometelo.zip</a></li>
+ <li><a href="plugin.video.cristalazul.zip">plugin.video.cristalazul.zip</a></li>
+ <li><a href="plugin.video.deportesalacarta.zip">plugin.video.deportesalacarta.zip</a></li>
+ <li><a href="plugin.video.eitbalacarta.zip">plugin.video.eitbalacarta.zip</a></li>
+ <li><a href="plugin.video.ElRinconDeLolo.zip">plugin.video.ElRinconDeLolo.zip</a></li>
+ <li><a href="plugin.video.ElRinconDelTerror.zip">plugin.video.ElRinconDelTerror.zip</a></li>
+ <li><a href="plugin.video.escalofrios.zip">plugin.video.escalofrios.zip</a></li>
+ <li><a href="plugin.video.EspAnime.zip">plugin.video.EspAnime.zip</a></li>
+ <li><a href="plugin.video.Explora.zip">plugin.video.Explora.zip</a></li>
+ <li><a href="plugin.video.festa.zip">plugin.video.festa.zip</a></li>
+ <li><a href="plugin.video.Iberika.zip">plugin.video.Iberika.zip</a></li>
+ <li><a href="plugin.video.INSOMNIA.zip">plugin.video.INSOMNIA.zip</a></li>
+ <li><a href="plugin.video.joker2.0.zip">plugin.video.joker2.0.zip</a></li>
+ <li><a href="plugin.video.JustForLaughs.zip">plugin.video.JustForLaughs.zip</a></li>
+ <li><a href="plugin.video.Lilianime.zip">plugin.video.Lilianime.zip</a></li>
+ <li><a href="plugin.video.live.magellan.zip">plugin.video.live.magellan.zip</a></li>
+ <li><a href="plugin.video.Magyck.zip">plugin.video.Magyck.zip</a></li>
+ <li><a href="plugin.video.Manuart.zip">plugin.video.Manuart.zip</a></li>
+ <li><a href="plugin.video.mediaexplorer.zip">plugin.video.mediaexplorer.zip</a></li>
+ <li><a href="plugin.video.mitele.zip">plugin.video.mitele.zip</a></li>
+ <li><a href="plugin.video.mundocine.zip">plugin.video.mundocine.zip</a></li>
+ <li><a href="plugin.video.MundoOscuro.zip">plugin.video.MundoOscuro.zip</a></li>
+ <li><a href="plugin.video.mundrone.zip">plugin.video.mundrone.zip</a></li>
+ <li><a href="plugin.video.ovni.zip">plugin.video.ovni.zip</a></li>
+ <li><a href="plugin.video.palantir.zip">plugin.video.palantir.zip</a></li>
+ <li><a href="plugin.video.PLsportowo.zip">plugin.video.PLsportowo.zip</a></li>
+ <li><a href="plugin.video.rtve.zip">plugin.video.rtve.zip</a></li>
+ <li><a href="plugin.video.SportDevil.zip">plugin.video.SportDevil.zip</a></li>
+ <li><a href="plugin.video.sportextreme.zip">plugin.video.sportextreme.zip</a></li>
+ <li><a href="plugin.video.sportwa.zip">plugin.video.sportwa.zip</a></li>
+ <li><a href="plugin.video.tacones.zip">plugin.video.tacones.zip</a></li>
+ <li><a href="plugin.video.Tesla.zip">plugin.video.Tesla.zip</a></li>
+ <li><a href="plugin.video.tvalacarta.zip">plugin.video.tvalacarta.zip</a></li>
+ <li><a href="plugin.video.tvchopo.zip">plugin.video.tvchopo.zip</a></li>
+ <li><a href="plugin.video.xmas.zip">plugin.video.xmas.zip</a></li>
+ <li><a href="plugin.video.youtube.zip">plugin.video.youtube.zip</a></li>
+
   </ul>
 
 </body>
