--- a/Infantil/index.html
+++ b/Infantil/index.html
@@ -2,18 +2,16 @@
 
  <head>
 
- <h1>jjmapa/addons</h1>
+ <h1>jjmapa/INFANTIL</h1>
 
  </head>
 
  <body>	
 
-  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
-  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
-  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
-  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
-  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
- 
+  <li><a href="plugin.video.festakids.zip">plugin.video.festakids.zip</a></li>
+  <li><a href="plugin.video.tvchopokids.zip">plugin.video.tvchopokids.zip</a></li>
+  <li><a href="plugin.video.YouKids.zip">plugin.video.YouKids.zip</a></li>
+   
   </ul>
 
 </body>
