--- a/Musica/index.html
+++ b/Musica/index.html
@@ -2,18 +2,26 @@
 
  <head>
 
- <h1>jjmapa/addons</h1>
+ <h1>jjmapa/Musica</h1>
 
  </head>
 
  <body>	
 
-  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
-  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
-  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
-  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
-  <li><a href="plugin.video.xxx.zip">plugin.video.xxx.zip</a></li>
- 
+  <li><a href="plugin.audio.housemixes.zip">plugin.audio.housemixes.zip</a></li>
+  <li><a href="plugin.audio.onair.zip">plugin.audio.onair.zip</a></li>
+  <li><a href="plugin.video.chillout.zip">plugin.video.chillout.zip</a></li>
+  <li><a href="plugin.video.dance.zip">plugin.video.dance.zip</a></li>
+  <li><a href="plugin.video.Disco-Kelebek.zip">plugin.video.Disco-Kelebek.zip</a></li>
+  <li><a href="plugin.video.musicando.zip">plugin.video.musicando.zip</a></li>
+  <li><a href="plugin.video.MyHR.zip">plugin.video.MyHR.zip</a></li>
+  <li><a href="plugin.video.next.zip">plugin.video.next.zip</a></li>
+  <li><a href="plugin.video.noise.zip">plugin.video.noise.zip</a></li>
+  <li><a href="plugin.video.now_music.zip">plugin.video.now_music.zip</a></li>
+  <li><a href="plugin.video.now_music_usa.zip">plugin.video.now_music_usa.zip</a></li>
+  <li><a href="plugin.video.Orchestra.zip">plugin.video.Orchestra.zip</a></li>
+  <li><a href="plugin.video.YouMusic.zip">plugin.video.YouMusic.zip</a></li>
+  
   </ul>
 
 </body>
