--- a/Repositorios/index.html
+++ b/Repositorios/index.html
@@ -6,7 +6,7 @@
 
 
 
- <h1>jjmapa Prueba</h1>
+ <h1>jjmapa/Repositorios</h1>
 
 
 
@@ -18,9 +18,28 @@
 
 
 
-  <li><a href="script.jjmapa.zip">script.jjmapa.zip</a></li>
-
-  
+  <li><a href="Repositorio.alfa-addon.zip">repositorio.alfa-addon.zip</a></li>
+  <li><a href="Repositorio.balandro.zip">repositorio.balandro.zip</a></li>
+  <li><a href="Repositorio.bugatsinho.zip">repositorio.bugatsinho.zip</a></li>
+ <li><a href="Repositorio.CanalNereo.zip">repositorio.CanalNereo.zip</a></li>
+ <li><a href="Repositorio.elementum.zip">repositorio.elementum.zip</a></li>
+ <li><a href="Repositorio.festa.zip">repositorio.festa.zip</a></li>
+ <li><a href="Repositorio.hirayasoftware.zip">repositorio.hirayasoftware.zip</a></li>
+ <li><a href="Repositorio.jsergio.zip">repositorio.jsergio.zip</a></li>
+ <li><a href="Repositorio.kodibae.zip">repositorio.kodibae.zip</a></li>
+ <li><a href="Repositorio.kodil.zip">repositorio.kodil.zip</a></li>
+ <li><a href="Repositorio.magellan.zip">repositorio.magellan.zip</a></li>
+ <li><a href="Repositorio.Maniac.zip">repositorio.Maniac.zip</a></li>
+ <li><a href="Repositorio.Netai.zip">repositorio.Netai.zip</a></li>
+ <li><a href="Repositorio.next.zip">repositorio.next.zip</a></li>
+ <li><a href="Repositorio.Palantir.zip">repositorio.Palantir.zip</a></li>
+ <li><a href="Repositorio.temptv.zip">repositorio.temptv.zip</a></li>
+ <li><a href="Repositorio.theblackghost.zip">repositorio.theblackghost.zip</a></li>
+ <li><a href="Repositorio.tvchopo.zip">repositorio.tvchopo.zip</a></li>
+ <li><a href="Repositorio.universalscrapers.zip">repositorio.universalscrapers.zip</a></li>
+ <li><a href="Repositorio.xbmchub.zip">repositorio.xbmchub.zip</a></li>
+ <li><a href="Repositorio.ZadarHRrepo.zip">repositorio.ZadarHRrepo.zip</a></li>
+   
   </ul>
 
 
