--- a/Addons/index.html
+++ b/Addons/index.html
@@ -7,49 +7,58 @@
  </head>
 
  <body>	
-
-  <li><a href="plugin.video.adrianaeurope.zip">plugin.video.adrianaeurope.zip</a></li>
-  <li><a href="plugin.video.aerobic.zip">plugin.video.aerobic.zip</a></li>
-  <li><a href="plugin.video.Agora.zip">plugin.video.Agora.zip</a></li>
-  <li><a href="plugin.video.alfa.zip">plugin.video.alfa.zip</a></li>
-  <li><a href="plugin.video.alma.zip">plugin.video.alma.zip</a></li>
- <li><a href="plugin.video.atresplayer.zip">plugin.video.atresplayer.zip</a></li>
- <li><a href="plugin.video.balandro.zip">plugin.video.balandro.zip</a></li>
- <li><a href="plugin.video.blackghost.zip">plugin.video.blackghost.zip</a></li>
- <li><a href="plugin.video.canal_cocina.zip">plugin.video.canal_cocina.zip</a></li>
+ 
+ <li><a href="plugin.googledrive">plugin.googledrive.zip</li>
+ <li><a href="plugin.googledrive-master">plugin.googledrive-master.zip</li>
+ <li><a href="plugin.program.super.favourites">plugin.program.super.favourites.zip</li>
+ <li><a href="plugin.video.1x2">plugin.video.1x2.zip</a></li>
+ <li><a href="plugin.video.adrianaeurope">plugin.video.adrianaeurope.zip</a></li>
+ <li><a href="plugin.video.aerobic">plugin.video.aerobic.zip</a></li>
+ <li><a href="plugin.video.Agora">plugin.video.Agora.zip</a></li>
+ <li><a href="plugin.video.alfa">plugin.video.alfa.zip</a></li>
+ <li><a href="plugin.video.alma">plugin.video.alma.zip</a></li>
+ <li><a href="plugin.video.atresplayer">plugin.video.atresplayer.zip</a></li>
+ <li><a href="plugin.video.balandro">plugin.video.balandro.zip</a></li>
+ <li><a href="plugin.video.blackghost">plugin.video.blackghost.zip</a></li>
+ <li><a href="plugin.video.canal_cocina">plugin.video.canal_cocina.zip</a></li>
+ <li><a href="plugin.video.canalsur">plugin.video.canalsur.zip</a></li>
  <li><a href="plugin.video.cocina.zip">plugin.video.cocina.zip</a></li>
- <li><a href="plugin.video.cometelo.zip">plugin.video.cometelo.zip</a></li>
- <li><a href="plugin.video.cristalazul.zip">plugin.video.cristalazul.zip</a></li>
- <li><a href="plugin.video.deportesalacarta.zip">plugin.video.deportesalacarta.zip</a></li>
- <li><a href="plugin.video.eitbalacarta.zip">plugin.video.eitbalacarta.zip</a></li>
- <li><a href="plugin.video.ElRinconDeLolo.zip">plugin.video.ElRinconDeLolo.zip</a></li>
- <li><a href="plugin.video.ElRinconDelTerror.zip">plugin.video.ElRinconDelTerror.zip</a></li>
- <li><a href="plugin.video.escalofrios.zip">plugin.video.escalofrios.zip</a></li>
- <li><a href="plugin.video.EspAnime.zip">plugin.video.EspAnime.zip</a></li>
- <li><a href="plugin.video.Explora.zip">plugin.video.Explora.zip</a></li>
- <li><a href="plugin.video.festa.zip">plugin.video.festa.zip</a></li>
- <li><a href="plugin.video.Iberika.zip">plugin.video.Iberika.zip</a></li>
- <li><a href="plugin.video.INSOMNIA.zip">plugin.video.INSOMNIA.zip</a></li>
+ <li><a href="plugin.video.cometelo">plugin.video.cometelo.zip</a></li>
+ <li><a href="plugin.video.cristalazul">plugin.video.cristalazul.zip</a></li>
+ <li><a href="plugin.video.deportesalacarta">plugin.video.deportesalacarta.zip</a></li>
+ <li><a href="plugin.video.eitbalacarta">plugin.video.eitbalacarta.zip</a></li>
+ <li><a href="plugin.video.ElRinconDeLolo">plugin.video.ElRinconDeLolo.zip</a></li>
+ <li><a href="plugin.video.ElRinconDelTerror">plugin.video.ElRinconDelTerror.zip</a></li>
+ <li><a href="plugin.video.escalofrios">plugin.video.escalofrios.zip</a></li>
+ <li><a href="plugin.video.EspAnime">plugin.video.EspAnime.zip</a></li>
+ <li><a href="plugin.video.Explora">plugin.video.Explora.zip</a></li>
+ <li><a href="plugin.video.festa">plugin.video.festa.zip</a></li>
+ <li><a href="plugin.video.Iberika">plugin.video.Iberika.zip</a></li>
+ <li><a href="plugin.video.INSOMNIA">plugin.video.INSOMNIA.zip</a></li>
  <li><a href="plugin.video.joker2.0.zip">plugin.video.joker2.0.zip</a></li>
- <li><a href="plugin.video.JustForLaughs.zip">plugin.video.JustForLaughs.zip</a></li>
- <li><a href="plugin.video.Lilianime.zip">plugin.video.Lilianime.zip</a></li>
- <li><a href="plugin.video.live.magellan.zip">plugin.video.live.magellan.zip</a></li>
- <li><a href="plugin.video.Magyck.zip">plugin.video.Magyck.zip</a></li>
- <li><a href="plugin.video.Manuart.zip">plugin.video.Manuart.zip</a></li>
- <li><a href="plugin.video.mediaexplorer.zip">plugin.video.mediaexplorer.zip</a></li>
- <li><a href="plugin.video.mitele.zip">plugin.video.mitele.zip</a></li>
- <li><a href="plugin.video.mundocine.zip">plugin.video.mundocine.zip</a></li>
- <li><a href="plugin.video.MundoOscuro.zip">plugin.video.MundoOscuro.zip</a></li>
- <li><a href="plugin.video.mundrone.zip">plugin.video.mundrone.zip</a></li>
- <li><a href="plugin.video.ovni.zip">plugin.video.ovni.zip</a></li>
- <li><a href="plugin.video.palantir.zip">plugin.video.palantir.zip</a></li>
- <li><a href="plugin.video.PLsportowo.zip">plugin.video.PLsportowo.zip</a></li>
- <li><a href="plugin.video.rtve.zip">plugin.video.rtve.zip</a></li>
- <li><a href="plugin.video.SportDevil.zip">plugin.video.SportDevil.zip</a></li>
- <li><a href="plugin.video.sportextreme.zip">plugin.video.sportextreme.zip</a></li>
- <li><a href="plugin.video.sportwa.zip">plugin.video.sportwa.zip</a></li>
- <li><a href="plugin.video.tacones.zip">plugin.video.tacones.zip</a></li>
- <li><a href="plugin.video.Tesla.zip">plugin.video.Tesla.zip</a></li>
+ <li><a href="plugin.video.JustForLaughs">plugin.video.JustForLaughs.zip</a></li>
+ <li><a href="plugin.video.Lilianime">plugin.video.Lilianime.zip</a></li>
+ <li><a href="plugin.video.live.magellan">plugin.video.live.magellan.zip</a></li>
+ <li><a href="plugin.video.Manuart">plugin.video.Manuart.zip</a></li>
+ <li><a href="plugin.video.mediaexplorer">plugin.video.mediaexplorer.zip</a></li>
+ <li><a href="plugin.video.mitele">plugin.video.mitele.zip</a></li>
+ <li><a href="plugin.video.mundocine">plugin.video.mundocine.zip</a></li>
+ <li><a href="plugin.video.MundoOscuro">plugin.video.MundoOscuro.zip</a></li>
+ <li><a href="plugin.video.mundrone">plugin.video.mundrone.zip</a></li>
+ <li><a href="plugin.video.netflix">plugin.video.netflix.zip</a></li>
+ <li><a href="plugin.video.netflix-master">plugin.video.netflix-master.zip</a></li>
+ <li><a href="plugin.video.Orchestra">plugin.video.Orchestra.zip</a></li>
+ <li><a href="plugin.video.ovni">plugin.video.ovni.zip</a></li>
+ <li><a href="plugin.video.palantir">plugin.video.palantir.zip</a></li>
+ <li><a href="plugin.video.PLsportowo">plugin.video.PLsportowo.zip</a></li>
+ <li><a href="plugin.video.rtve">plugin.video.rtve.zip</a></li>
+ <li><a href="plugin.video.Sport365.Live">plugin.video.sport365.live.zip</a></li>
+ <li><a href="plugin.video.SportDevil">plugin.video.SportDevil.zip</a></li>
+ <li><a href="plugin.video.sportwa">plugin.video.sportwa.zip</a></li>
+ <li><a href="plugin.video.spotitube">plugin.video.spotitube.zip</a></li>
+ <li><a href="plugin.video.tacones">plugin.video.tacones.zip</a></li>
+ <li><a href="plugin.video.Tesla">plugin.video.Tesla.zip</a></li>
+ <li><a href="plugin.video.tide">plugin.video.tide.zip</a></li>
  <li><a href="plugin.video.tvalacarta.zip">plugin.video.tvalacarta.zip</a></li>
  <li><a href="plugin.video.tvchopo.zip">plugin.video.tvchopo.zip</a></li>
  <li><a href="plugin.video.xmas.zip">plugin.video.xmas.zip</a></li>
