--- a/Addons/index.html
+++ b/Addons/index.html
@@ -8,61 +8,61 @@
 
  <body>	
  
- <li><a href="plugin.googledrive">plugin.googledrive.zip</li>
- <li><a href="plugin.googledrive-master">plugin.googledrive-master.zip</li>
- <li><a href="plugin.program.super.favourites">plugin.program.super.favourites.zip</li>
- <li><a href="plugin.video.1x2">plugin.video.1x2.zip</a></li>
- <li><a href="plugin.video.adrianaeurope">plugin.video.adrianaeurope.zip</a></li>
- <li><a href="plugin.video.aerobic">plugin.video.aerobic.zip</a></li>
- <li><a href="plugin.video.Agora">plugin.video.Agora.zip</a></li>
- <li><a href="plugin.video.alfa">plugin.video.alfa.zip</a></li>
- <li><a href="plugin.video.alma">plugin.video.alma.zip</a></li>
- <li><a href="plugin.video.atresplayer">plugin.video.atresplayer.zip</a></li>
- <li><a href="plugin.video.balandro">plugin.video.balandro.zip</a></li>
- <li><a href="plugin.video.blackghost">plugin.video.blackghost.zip</a></li>
- <li><a href="plugin.video.canal_cocina">plugin.video.canal_cocina.zip</a></li>
- <li><a href="plugin.video.canalsur">plugin.video.canalsur.zip</a></li>
- <li><a href="plugin.video.cocina.zip">plugin.video.cocina.zip</a></li>
- <li><a href="plugin.video.cometelo">plugin.video.cometelo.zip</a></li>
- <li><a href="plugin.video.cristalazul">plugin.video.cristalazul.zip</a></li>
- <li><a href="plugin.video.deportesalacarta">plugin.video.deportesalacarta.zip</a></li>
- <li><a href="plugin.video.eitbalacarta">plugin.video.eitbalacarta.zip</a></li>
- <li><a href="plugin.video.ElRinconDeLolo">plugin.video.ElRinconDeLolo.zip</a></li>
- <li><a href="plugin.video.ElRinconDelTerror">plugin.video.ElRinconDelTerror.zip</a></li>
- <li><a href="plugin.video.escalofrios">plugin.video.escalofrios.zip</a></li>
- <li><a href="plugin.video.EspAnime">plugin.video.EspAnime.zip</a></li>
- <li><a href="plugin.video.Explora">plugin.video.Explora.zip</a></li>
- <li><a href="plugin.video.festa">plugin.video.festa.zip</a></li>
- <li><a href="plugin.video.Iberika">plugin.video.Iberika.zip</a></li>
- <li><a href="plugin.video.INSOMNIA">plugin.video.INSOMNIA.zip</a></li>
- <li><a href="plugin.video.joker2.0.zip">plugin.video.joker2.0.zip</a></li>
- <li><a href="plugin.video.JustForLaughs">plugin.video.JustForLaughs.zip</a></li>
- <li><a href="plugin.video.Lilianime">plugin.video.Lilianime.zip</a></li>
- <li><a href="plugin.video.live.magellan">plugin.video.live.magellan.zip</a></li>
- <li><a href="plugin.video.Manuart">plugin.video.Manuart.zip</a></li>
- <li><a href="plugin.video.mediaexplorer">plugin.video.mediaexplorer.zip</a></li>
- <li><a href="plugin.video.mitele">plugin.video.mitele.zip</a></li>
- <li><a href="plugin.video.mundocine">plugin.video.mundocine.zip</a></li>
- <li><a href="plugin.video.MundoOscuro">plugin.video.MundoOscuro.zip</a></li>
- <li><a href="plugin.video.mundrone">plugin.video.mundrone.zip</a></li>
- <li><a href="plugin.video.netflix">plugin.video.netflix.zip</a></li>
- <li><a href="plugin.video.netflix-master">plugin.video.netflix-master.zip</a></li>
- <li><a href="plugin.video.Orchestra">plugin.video.Orchestra.zip</a></li>
- <li><a href="plugin.video.ovni">plugin.video.ovni.zip</a></li>
- <li><a href="plugin.video.palantir">plugin.video.palantir.zip</a></li>
- <li><a href="plugin.video.PLsportowo">plugin.video.PLsportowo.zip</a></li>
- <li><a href="plugin.video.rtve">plugin.video.rtve.zip</a></li>
- <li><a href="plugin.video.Sport365.Live">plugin.video.sport365.live.zip</a></li>
- <li><a href="plugin.video.SportDevil">plugin.video.SportDevil.zip</a></li>
- <li><a href="plugin.video.sportwa">plugin.video.sportwa.zip</a></li>
- <li><a href="plugin.video.spotitube">plugin.video.spotitube.zip</a></li>
- <li><a href="plugin.video.tacones">plugin.video.tacones.zip</a></li>
- <li><a href="plugin.video.Tesla">plugin.video.Tesla.zip</a></li>
- <li><a href="plugin.video.tide">plugin.video.tide.zip</a></li>
- <li><a href="plugin.video.tvalacarta.zip">plugin.video.tvalacarta.zip</a></li>
- <li><a href="plugin.video.tvchopo.zip">plugin.video.tvchopo.zip</a></li>
- <li><a href="plugin.video.xmas.zip">plugin.video.xmas.zip</a></li>
- <li><a href="plugin.video.youtube.zip">plugin.video.youtube.zip</a></li>
+ <li><a href="plugin.googledrive.ZIP">plugin.googledrive.zip</li>
+ <li><a href="plugin.googledrive-master.ZIP">plugin.googledrive-master.zip</li>
+ <li><a href="plugin.program.super.favourites.ZIP">plugin.program.super.favourites.zip</li>
+ <li><a href="plugin.video.1x2.ZIP">plugin.video.1x2.zip</a></li>
+ <li><a href="plugin.video.adrianaeurope.ZIP">plugin.video.adrianaeurope.zip</a></li>
+ <li><a href="plugin.video.aerobic.ZIP">plugin.video.aerobic.zip</a></li>
+ <li><a href="plugin.video.Agora.ZIP">plugin.video.Agora.zip</a></li>
+ <li><a href="plugin.video.alfa.ZIP">plugin.video.alfa.zip</a></li>
+ <li><a href="plugin.video.alma.ZIP">plugin.video.alma.zip</a></li>
+ <li><a href="plugin.video.atresplayer.ZIP">plugin.video.atresplayer.zip</a></li>
+ <li><a href="plugin.video.balandro.ZIP">plugin.video.balandro.zip</a></li>
+ <li><a href="plugin.video.blackghost.ZIP">plugin.video.blackghost.zip</a></li>
+ <li><a href="plugin.video.canal_cocina.ZIP">plugin.video.canal_cocina.zip</a></li>
+ <li><a href="plugin.video.canalsur.ZIP">plugin.video.canalsur.zip</a></li>
+ <li><a href="plugin.video.cocina.zip.ZIP">plugin.video.cocina.zip</a></li>
+ <li><a href="plugin.video.cometelo.ZIP">plugin.video.cometelo.zip</a></li>
+ <li><a href="plugin.video.cristalazul.ZIP">plugin.video.cristalazul.zip</a></li>
+ <li><a href="plugin.video.deportesalacarta.ZIP">plugin.video.deportesalacarta.zip</a></li>
+ <li><a href="plugin.video.eitbalacarta.ZIP">plugin.video.eitbalacarta.zip</a></li>
+ <li><a href="plugin.video.ElRinconDeLolo.ZIP">plugin.video.ElRinconDeLolo.zip</a></li>
+ <li><a href="plugin.video.ElRinconDelTerror.ZIP">plugin.video.ElRinconDelTerror.zip</a></li>
+ <li><a href="plugin.video.escalofrios.ZIP">plugin.video.escalofrios.zip</a></li>
+ <li><a href="plugin.video.EspAnime.ZIP">plugin.video.EspAnime.zip</a></li>
+ <li><a href="plugin.video.Explora.ZIP">plugin.video.Explora.zip</a></li>
+ <li><a href="plugin.video.festa.ZIP">plugin.video.festa.zip</a></li>
+ <li><a href="plugin.video.Iberika.ZIP">plugin.video.Iberika.zip</a></li>
+ <li><a href="plugin.video.INSOMNIA.ZIP">plugin.video.INSOMNIA.zip</a></li>
+ <li><a href="plugin.video.joker2.0.zip.ZIP">plugin.video.joker2.0.zip</a></li>
+ <li><a href="plugin.video.JustForLaughs.ZIP">plugin.video.JustForLaughs.zip</a></li>
+ <li><a href="plugin.video.Lilianime.ZIP">plugin.video.Lilianime.zip</a></li>
+ <li><a href="plugin.video.live.magellan.ZIP">plugin.video.live.magellan.zip</a></li>
+ <li><a href="plugin.video.Manuart.ZIP">plugin.video.Manuart.zip</a></li>
+ <li><a href="plugin.video.mediaexplorer.ZIP">plugin.video.mediaexplorer.zip</a></li>
+ <li><a href="plugin.video.mitele.ZIP">plugin.video.mitele.zip</a></li>
+ <li><a href="plugin.video.mundocine.ZIP">plugin.video.mundocine.zip</a></li>
+ <li><a href="plugin.video.MundoOscuro.ZIP">plugin.video.MundoOscuro.zip</a></li>
+ <li><a href="plugin.video.mundrone.ZIP">plugin.video.mundrone.zip</a></li>
+ <li><a href="plugin.video.netflix.ZIP">plugin.video.netflix.zip</a></li>
+ <li><a href="plugin.video.netflix-master.ZIP">plugin.video.netflix-master.zip</a></li>
+ <li><a href="plugin.video.Orchestra.ZIP">plugin.video.Orchestra.zip</a></li>
+ <li><a href="plugin.video.ovni.ZIP">plugin.video.ovni.zip</a></li>
+ <li><a href="plugin.video.palantir.ZIP">plugin.video.palantir.zip</a></li>
+ <li><a href="plugin.video.PLsportowo.ZIP">plugin.video.PLsportowo.zip</a></li>
+ <li><a href="plugin.video.rtve.ZIP">plugin.video.rtve.zip</a></li>
+ <li><a href="plugin.video.Sport365.Live.ZIP">plugin.video.sport365.live.zip</a></li>
+ <li><a href="plugin.video.SportDevil.ZIP">plugin.video.SportDevil.zip</a></li>
+ <li><a href="plugin.video.sportwa.ZIP">plugin.video.sportwa.zip</a></li>
+ <li><a href="plugin.video.spotitube.ZIP">plugin.video.spotitube.zip</a></li>
+ <li><a href="plugin.video.tacones.ZIP">plugin.video.tacones.zip</a></li>
+ <li><a href="plugin.video.Tesla.ZIP">plugin.video.Tesla.zip</a></li>
+ <li><a href="plugin.video.tide.ZIP">plugin.video.tide.zip</a></li>
+ <li><a href="plugin.video.tvalacarta.ZIP">plugin.video.tvalacarta.zip</a></li>
+ <li><a href="plugin.video.tvchopo.ZIP">plugin.video.tvchopo.zip</a></li>
+ <li><a href="plugin.video.xmas.ZIP">plugin.video.xmas.zip</a></li>
+ <li><a href="plugin.video.youtube.ZIP">plugin.video.youtube.zip</a></li>
 
   </ul>
 
