--- a/Deportes/index.html
+++ b/Deportes/index.html
@@ -8,9 +8,10 @@
 
  <body>	
 
+  <li><a href="Dependencias1X2/">Dependencias1X2</a><td></td></li>
+  <li><a href="plugin.video.1x2.zip">plugin.video.1x2.zip</a></li>
   <li><a href="plugin.video.cristalazul.zip">plugin.video.cristalazul.zip</a></li>
   <li><a href="plugin.video.tvchopo.zip">plugin.video.tvchopo.zip</a></li>
-  <li><a href="plugin.video.1x2.zip">plugin.video.1x2.zip</a></li>
   <li><a href="plugin.video.dazn.zip">plugin.video.dazn.zip</a></li>
   <li><a href="plugin.video.deportesalacarta.zip">plugin.video.deportesalacarta.zip</a></li>
   <li><a href="plugin.video.PLsportowo.zip">plugin.video.PLsportowo.zip</a></li>
