--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <li><a href="Addons/">Addons</a><td></td></li>
   <li><a href="Programas/">Programas</a><td></td></li>
   <li><a href="Deportes/">Deportes</a><td></td></li>
-  <li><a href="Peliculas y Series/">Peliculas y Series</a><td></td></li>
+  <li><a href="Peliculas_y_Series/">Peliculas y Series</a><td></td></li>
   <li><a href="Television/">Television</a><td></td></li>
-  <li><a href="Variado/">Variados</a><td></td></li>
+  <li><a href="Variados/">Variados</a><td></td></li>
   <li><a href="Cocina/">Cocina</a><td></td></li>
   <li><a href="Musica/">Musica</a><td></td></li>
   <li><a href="Infantiles/">Infantiles</a><td></td></li>  
